# wasm-3d

./: 0.bootstrap.js  1.bootstrap.js  Cargo.toml  README.md  bootstrap.js  index.html
src/: app_state.rs  common_funcs.rs  gl_setup.rs  lib.rs
src/programs/: color_2d.rs  color_2d_gradient.rs  mod.rs
src/shaders/vertex/: color_2d.rs
www/: index.html  index.js  package.json
